<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <LinearLayout
        android:id="@+id/order_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_marginTop="5dip"
            android:text="@string/order_parameter"
            android:textColor="@color/information_text_color" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@drawable/separator_info" />

        <LinearLayout
            android:id="@+id/from_header"
            style="@style/order_edit_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                style="@style/order_header_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/order_from_adress" />

            <TextView
                android:id="@+id/textView3"
                style="@style/order_header_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/order_from_building" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/from_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/from_adress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dip"
                android:layout_weight="1"
                android:background="@drawable/o_bottom_line"
                android:inputType="textPostalAddress" >

                <requestFocus android:layout_width="wrap_content" />
            </EditText>

            <EditText
                android:id="@+id/from_house"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dip"
                android:layout_weight="3"
                android:background="@drawable/o_bottom_line"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/from2_heder"
            style="@style/order_edit_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView4"
                style="@style/order_header_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/order_from_door" />

            <TextView
                android:id="@+id/textView5"
                style="@style/order_header_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/order_from_comment" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/from2_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6" >

            <EditText
                android:id="@+id/from_porch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dip"
                android:layout_weight="6"
                android:background="@drawable/o_bottom_line"
                android:inputType="number"
                android:textColor="@color/information_text_color" />

            <EditText
                android:id="@+id/from_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dip"
                android:layout_weight="4"
                android:inputType="text"
                android:background="@drawable/o_bottom_line"
                android:textColor="@color/information_text_color" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/to_header"
            style="@style/order_edit_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView01"
                style="@style/order_header_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/order_to_adress" />

            <TextView
                android:id="@+id/TextView02"
                style="@style/order_header_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/order_from_building" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/to_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/to_adress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dip"
                android:layout_weight="1"
                android:background="@drawable/o_bottom_line"
                android:inputType="textPostalAddress"
                android:textColor="@color/information_text_color" />

            <EditText
                android:id="@+id/to_house"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dip"
                android:layout_weight="3"
                android:background="@drawable/o_bottom_line"
                android:inputType="number"
                android:textColor="@color/information_text_color" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/checkboxes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/checkBox1"
                style="@style/order_checkbox_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/order_checkbox_incity" />

            <CheckBox
                android:id="@+id/checkBox2"
                style="@style/order_checkbox_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/order_checkbox_universal"
                 />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/checkboxes2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/CheckBox3"
                style="@style/order_checkbox_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/order_checkbox_conditioner"
                />

            <CheckBox
                android:id="@+id/CheckBox4"
                style="@style/order_checkbox_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/order_checkbox_insalon"
                 />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/checkboxes3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip" >

            <CheckBox
                android:id="@+id/CheckBox5"
                style="@style/order_checkbox_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:button="@drawable/checkbox_selector"
                android:checked="false"
                android:text="@string/order_checkbox_animals" />

            <CheckBox
                android:id="@+id/CheckBox6"
                style="@style/order_checkbox_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dip"
                android:layout_weight="2"
                android:checked="true"
                android:text="@string/order_checkbox_future" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/timing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/order_time_now"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="22:19"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/information_text_color" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/order_time_to"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="22:19"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/information_text_color" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/contact_header"
            style="@style/order_edit_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/order_name"
                android:textColor="@color/information_text_color" />

            <TextView
                android:id="@+id/TextView04"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/order_phone"
                android:textColor="@color/information_text_color" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/contact_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6" >

            <EditText
                android:id="@+id/EditText02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dip"
                android:layout_weight="6"
                android:background="@drawable/o_bottom_line"
                android:inputType="textPersonName"
                android:textColor="@color/information_text_color" />

            <EditText
                android:id="@+id/EditText01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dip"
                android:layout_weight="4"
                android:background="@drawable/o_bottom_line"
                android:inputType="phone"
                android:textColor="@color/information_text_color" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dip" >

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_price"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="999.00"
                android:textColor="@color/information_text_color" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dip"
                android:layout_weight="1"
                android:background="@drawable/info_button_background_inactive"
                android:paddingBottom="10dip"
                android:paddingTop="10dip"
                android:text="@string/order_price_button"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dip"
                android:layout_weight="1"
                android:background="@drawable/info_button_background_inactive"
                android:paddingBottom="10dip"
                android:paddingTop="10dip"
                android:text="@string/order_order_button"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>