<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/City"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="10dip"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="10dip"
            android:text="@string/choise_city"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/information_text_color" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@drawable/separator_info" />

        <ToggleButton
            android:id="@+id/cityToggleButtonKy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/city_togglebutton_selector"
            android:gravity="left|center_vertical"
            android:textColor="@color/white"
            android:textOff="@string/city_kyiv"
            android:textOn="@string/city_kyiv"
            android:textSize="@dimen/city_text_size"
            android:textStyle="bold" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@drawable/separator" />

        <ToggleButton
            android:id="@+id/cityToggleButtonDp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/city_togglebutton_selector"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:textOff="@string/city_dnipropetrovsk"
            android:textOn="@string/city_dnipropetrovsk"
            android:textSize="@dimen/city_text_size"
            android:textStyle="bold" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@drawable/separator" />

        <ToggleButton
            android:id="@+id/cityToggleButtonZp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/city_togglebutton_selector"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:textOff="@string/city_zaporozie"
            android:textOn="@string/city_zaporozie"
            android:textSize="@dimen/city_text_size"
            android:textStyle="bold" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@drawable/separator" />

        <ToggleButton
            android:id="@+id/cityToggleButtonKr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/city_togglebutton_selector"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:textOff="@string/city_krivoi_rog"
            android:textOn="@string/city_krivoi_rog"
            android:textSize="@dimen/city_text_size"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>